# ML

./: README.md  main1.py  quartile_boxplot.avif  reg_data.csv  reqrmnt.txt
FastAPIlab/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  reqrmt.txt
FastAPIlab/app/: client.py  main.py  model.env  model_unit.py  module_download.py  router_v1.py
FastAPIlab/app/v1/: main.py
FastAPIlab/model/: len_reg_4features==1.6.1 and 4.0.pkl  model_onfo.json
Logreg/model/: heart_model_v1.pkl
lab1/: main1.py
linregweb/: .dockerignore  Dockerfile  Lin_reg_class.py  lin_regres.csv  main.py  manual.md  model.env  model_unit.py  module_download.py  pyproject.toml  reqrmt.txt  test.py
linregweb/model/: for_test_result.json  metrics_model.json
rag/: README.md  doc_gem1.txt  doc_skill_gems.txt  filecs.py  main.py  pyproject.toml
