[project]
name = "fastapilab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.120.4",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
]
