[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.1",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "langchain-ollama>=1.0.0",
    "sentence-transformers>=5.1.2",
]
